Add dst and lpa test result.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,24 @@ en:
         entity_id: Patient id
       comment:
         commented_on: Date
+      dst_lpa_result:
+        sample_collected_on: 'Date sample collected'
+        media_used: 'Method'
+        serial_number: 'Lab serial number'
+        results_h: 'Result H'
+        results_r: 'Result R'
+        results_e: 'Result E'
+        results_s: 'Result S'
+        results_amk: 'Result Amk'
+        results_km: 'Result Km'
+        results_cm: 'Result Cm'
+        results_fq: 'Result FQ'
+        results_other1: 'Result Other'
+        results_other2: 'Result Other'
+        results_other3: 'Result Other'
+        results_other4: 'Result Other'
+        examined_by: 'Examined by'
+        result_on: 'Date of result'
 
   user:
     settings:
@@ -57,11 +75,3 @@ en:
       ftp_file_failed: "FTP file %{remote_name} on hostname %{ftp_hostname} failed: %{reason}"
       ftp_file_success: "FTP file %{remote_name} on hostname %{ftp_hostname} processed successfuly"
       error_accessing_ftp: "Error accessing FTP %{ftp_hostname}: %{exception}\n%{backtrace_list}"
-
-  select:
-    default: Please Select
-# es:
-#   date:
-#     input_format:
-#       pattern: "%d/%m/%Y"
-#       placeholder: DD/MM/YYYY
