--- a/config/locales/views/culture_results.en.yml
+++ b/config/locales/views/culture_results.en.yml
@@ -2,3 +2,6 @@ en:
   culture_results:
     new:
       header: 'Add Culture Test Result'
+    create:
+      audit: 'Culture result added'
+      notice: 'Culture result was successfully created.'
