--- a/config/locales/views/microscopy_results.en.yml
+++ b/config/locales/views/microscopy_results.en.yml
@@ -2,3 +2,6 @@ en:
   microscopy_results:
     new:
       header: 'Add Microscopy Result'
+    create:
+      audit: 'Microscopy result added'
+      notice: 'Microscopy result was successfully created.'
