--- a/config/locales/views/xpert_results.en.yml
+++ b/config/locales/views/xpert_results.en.yml
@@ -2,3 +2,6 @@ en:
   xpert_results:
     new:
       header: 'Add Xpert MTB/RIF Test Result'
+    create:
+      audit: 'Xpert MTB/RIF result added'
+      notice: 'Xpert MTB/RIF result was successfully created.'
