--- a/config/locales/views/dashboard.en.yml
+++ b/config/locales/views/dashboard.en.yml
@@ -13,6 +13,8 @@ en:
       average_tests_by_technician: 'Average Tests by Technician'
       outstanding_tests: 'Outstanding Tests'
       no_chart_information: 'No chart information available'
+      devices_not_responding: 'Devices Not Responding'
+      device_error_codes: 'Device Error Codes'
     chart_helper:
       previous_month: 'Previous month'
       previous_week: 'Previous week'
