--- a/config/locales/extras.en.yml
+++ b/config/locales/extras.en.yml
@@ -4,4 +4,5 @@ en:
       filters:
         previous_week: 'Previous week'
         previous_month: 'Previous month'
+        previous_quarter: 'Previous quarter'
         previous_year: 'Previous year'
