Add missing links.

--- a/config/locales/views/devices.en.yml
+++ b/config/locales/views/devices.en.yml
@@ -3,6 +3,10 @@ en:
     show:
       performance: 'Performance'
       setup: 'Setup'
+    performance:
+      explore_tests: 'Explore tests'
+      or: 'or'
+      logs: 'Logs'
     new:
       new_device: 'New Device'
     form:
