Add xpert results show page.

--- a/config/locales/views/xpert_results.en.yml
+++ b/config/locales/views/xpert_results.en.yml
@@ -5,3 +5,5 @@ en:
     create:
       audit: 'Xpert MTB/RIF result added'
       notice: 'Xpert MTB/RIF result was successfully created.'
+    show:
+      header: 'Xpert MTB/RIF results for: %{patient_name}'
