--- a/config/locales/views/microscopy_results.en.yml
+++ b/config/locales/views/microscopy_results.en.yml
@@ -6,4 +6,4 @@ en:
       audit: 'Microscopy result added'
       notice: 'Microscopy result was successfully created.'
     show:
-      header: 'Microscopy results for: %{patient_name}'
+      header: 'Microscopy test result for: %{patient_name}'
