--- a/config/locales/views/culture_results.en.yml
+++ b/config/locales/views/culture_results.en.yml
@@ -5,3 +5,5 @@ en:
     create:
       audit: 'Culture result added'
       notice: 'Culture result was successfully created.'
+    show:
+      header: 'Culture test result for: %{patient_name}'
