--- a/config/locales/views/xpert_results.en.yml
+++ b/config/locales/views/xpert_results.en.yml
@@ -6,4 +6,4 @@ en:
       audit: 'Xpert MTB/RIF result added'
       notice: 'Xpert MTB/RIF result was successfully created.'
     show:
-      header: 'Xpert MTB/RIF results for: %{patient_name}'
+      header: 'Xpert MTB/RIF test result for: %{patient_name}'
