--- a/config/locales/models/patient.en.yml
+++ b/config/locales/models/patient.en.yml
@@ -10,3 +10,7 @@ en:
         email: 'E-mail'
         address: 'Address'
         created_at: 'Created at'
+  patient:
+    model_form:
+      wrong_date: 'should be a date in %{dob_placeholder}'
+      wrong_gender: 'is not within valid options (should be one of %{gender_values})'
