--- a/config/locales/views/dashboard.en.yml
+++ b/config/locales/views/dashboard.en.yml
@@ -4,7 +4,7 @@ en:
       date_to: 'Date To'
       date_from: 'Date From'
       date_period: 'Date Period'
-      filter_button: 'Filter'
+      filter_button: 'Clear Filter'
       total_tests: 'Total Tests'
       failed_tests: 'Failed Tests'
       total_tests_by_site: 'Total Tests by Site'
