--- a/config/locales/views/devices.en.yml
+++ b/config/locales/views/devices.en.yml
@@ -39,6 +39,7 @@ en:
       go_back: 'Ok, understood, go back'
       last_time: 'This is the last time you will be able to view the token. Please keep it safe'
     filters:
+      header: 'Devices'
       add_device: 'Add Device'
       show_filters: 'Show filters'
       manufacturer: 'Manufacturer'
