--- a/config/locales/views/test_results.en.yml
+++ b/config/locales/views/test_results.en.yml
@@ -15,3 +15,15 @@ en:
       no_other_test: 'No other test was made with this sample'
       was_also_made: 'was also made with this sample'
       were_also_made: 'were also made with this sample'
+    index:
+      header: 'No %{test_result} have been reported'
+      test:
+        zero: 'tests'
+        one: 'test'
+        other: '%{count} tests'
+      test_order:
+        zero: 'test orders'
+        one: 'test order'
+        other: '%{count} test orders'
+      test_results: 'test results'
+      setup_devices: 'Setup your devices first in order to start reporting'
