--- a/config/locales/views/test_orders.en.yml
+++ b/config/locales/views/test_orders.en.yml
@@ -5,9 +5,9 @@ en:
       not_applicable: 'Not Applicable'
       header: 'No test orders have been created'
       test_order:
-        zero: 'test orders'
-        one: 'test order'
-        other: '%{count} test orders'
+        zero: 'Test orders'
+        one: 'Test order'
+        other: '%{count} Test orders'
     filters:
       show_all: 'Show all'
       show_filters: 'Show filters'
