--- a/config/locales/views/test_results.en.yml
+++ b/config/locales/views/test_results.en.yml
@@ -12,6 +12,7 @@ en:
       assays: 'Assays'
       additional_data: 'Additional data'
       sample: 'Sample'
+      other_tests: 'Other tests'
       no_other_test: 'No other test was made with this sample'
       was_also_made: 'was also made with this sample'
       were_also_made: 'were also made with this sample'
