Add trace for Xpert form.

--- a/config/locales/models/xpert_result.en.yml
+++ b/config/locales/models/xpert_result.en.yml
@@ -6,4 +6,5 @@ en:
         examined_by: 'Examined by'
         result_on: 'Date of result'
         rifampicin: 'Rifampicin resistance'
+        trace: 'Trace'
         tuberculosis: 'M. tuberculosis'
