--- a/config/locales/select.en.yml
+++ b/config/locales/select.en.yml
@@ -34,6 +34,11 @@ en:
         detected: 'Detected'
         not_detected: 'Not Detected'
         indeterminate:  'Indeterminate result'
+      trace:
+        very_low: 'Very low'
+        low: 'Low'
+        medium: 'Medium'
+        high: 'High'
     user:
       status_options:
         show_all: 'Show all'
