--- a/config/locales/models/patient.en.yml
+++ b/config/locales/models/patient.en.yml
@@ -2,7 +2,7 @@ en:
   activerecord:
     attributes:
       patient:
-        birth_date_on: 'Date of birth'
+        birth_date_on: 'Date of birth / Age'
         entity_id: 'Patient id'
         name: 'Name'
         gender: 'Gender'
