Show tabs for open and closed episodes.

--- a/config/locales/views/episodes.en.yml
+++ b/config/locales/views/episodes.en.yml
@@ -3,3 +3,11 @@ en:
     form:
       header: 'Episode (TB) for %{patient_name}'
       history: 'History of Previous Treatment'
+    create:
+      new_episode: 'New episode created'
+      episode_created: 'Episode successfully created.'
+    update:
+      update_episode: 'Episode updated'
+      episode_updated: 'Episode successfully updated.'
+    permission:
+      not_allowed: "You don't have permisson to manage episodes for this patient"
