--- a/config/locales/views/episodes.en.yml
+++ b/config/locales/views/episodes.en.yml
@@ -3,6 +3,9 @@ en:
     form:
       header: 'Episode for %{patient_name}'
       history: 'History of Previous Treatment'
+      select_type_of_episode: 'Select Type of Episode'
+      episode_details: 'Episode Details'
+      episode_type_not_available: 'This Episode Type is not currently available'
     create:
       new_episode: 'New episode created'
       episode_created: 'Episode successfully created.'
