Add new search field to test orders.

--- a/config/locales/select.en.yml
+++ b/config/locales/select.en.yml
@@ -6,6 +6,11 @@ en:
         male: 'Male'
         female: 'Female'
         other: 'Other'
+    encounter:
+      testing_for_options:
+        tb: 'Tuberculosis'
+        hiv: 'H.I.V.'
+        ebola: 'Ebola'
     microscopy:
       visual_appearance:
         blood: 'Blood-stained'
