--- a/config/locales/models/microscopy_result.en.yml
+++ b/config/locales/models/microscopy_result.en.yml
@@ -8,8 +8,4 @@ en:
         specimen_type: 'Specimen type'
         serial_number: 'Laboratory serial number(s)'
         appearance: 'Visual appearance'
-        results_negative: 'Results Negative'
-        results_1to9: 'Results 1-9'
-        results_1plus: 'Results +'
-        results_2plus: 'Results ++'
-        results_3plus: 'Results +++'
+        test_result: 'Result'
