Add filter to dst lpa.

--- a/config/locales/select.en.yml
+++ b/config/locales/select.en.yml
@@ -27,7 +27,7 @@ en:
         liquid: 'Liquid'
         solid: 'Solid'
       test_result_options:
-        ntp: 'Ntp'
+        ntm: 'Ntm'
         contaminated: 'Contaminated'
     dst_lpa:
       dst_lpa_options:
