--- a/config/locales/views/test_results.en.yml
+++ b/config/locales/views/test_results.en.yml
@@ -10,7 +10,7 @@ en:
       date_to: 'Date To'
       type: 'Type'
       status: 'Status'
-      sample_id: 'Sample Id'
+      sample_id: 'Serial number'
       test_order_id: 'Test Order Id'
       device: 'Device'
       tests: 'Tests'
@@ -18,6 +18,15 @@ en:
       show_all: 'Show All'
       test_result: 'Test result'
       appearance: 'Appearance'
+      media: 'Media used'
+      results_h: 'Results H'
+      results_r: 'Results R'
+      results_e: 'Results E'
+      results_s: 'Results S'
+      results_amk: 'Results Amk'
+      results_km: 'Results Km'
+      results_cm: 'Results Cm'
+      results_fq: 'Results Fq'
     show:
       test_belongs_to: 'This test belongs to an encounter.'
       click_here: 'Click here'
