--- a/config/locales/views/patients.en.yml
+++ b/config/locales/views/patients.en.yml
@@ -21,6 +21,7 @@ en:
       last_test_order: 'Last test order'
       patients: 'Patients'
       clear_button:  'Clear'
+      address: 'Address'
     new:
       new_patient: 'New patient'
       new_patient_details: 'New patient details'
