--- a/config/locales/views/alert_groups.vi.yml
+++ b/config/locales/views/alert_groups.vi.yml
@@ -2,7 +2,7 @@ vi:
   alert_groups:
     index:
       no_alerts: 'Không có nhóm thông báo nào'
-      no_alert_groups: 'Có một nhóm thông báo ở %{entity_name}'
+      no_alert_groups: 'Không có nhóm thông báo ở %{entity_name}'
       create_alert_groups: 'Tạo nhóm thông báo để thông báo cho nhóm của bạn về những sự kiện hiện tại.'
       alert_group:
         zero: 'Không có nhóm thông báo'
