--- a/config/locales/views/js_screen_views.vi.yml
+++ b/config/locales/views/js_screen_views.vi.yml
@@ -187,7 +187,7 @@ vi:
       testing_for_label: "Thử nghiệm cho:"
       culture_format_label: "Định dạng môi trường nuôi cấy:"
       comment_label: "Bình luận:"
-      ưeeks_in_treatment_label: "Số tuần điều trị:"
+      weeks_in_treatment_label: "Số tuần điều trị:"
       samples_id_label: "Mã mẫu:"
       sample_type_label: "Loại mẫu:"
       test_due_date_label: "Ngày hết hạn thử nghiệm:" 
@@ -201,6 +201,8 @@ vi:
       confirmation_btn: "Xác nhận"
       cancel_btn: "Hủy bỏ"
       confirm_btn: "Xác nhận"
+      reason_exam_label: "Lý do thử nghiệm:"
+      presumptive: "Giả định TB RR:"
 
     fresh_tests_encounter_form:
       alert_new_sample: "Mẫu này đã được thêm"
@@ -296,6 +298,7 @@ vi:
       confirm_title: "Yêu cầu kết quả thử nghiệm môi trường nuôi cấy"
       close_btn: "Đóng"
       add_result_btn:  "Thêm kết quả"
+      turnaround_col: "Chu kỳ"
 
     resource_list:
       add_element_btn1: "Thêm phần tử vào danh sách ngoại lệ"
