--- a/config/locales/views/js_screen_views.en.yml
+++ b/config/locales/views/js_screen_views.en.yml
@@ -248,6 +248,7 @@ en:
       gender_col: "Gender"
       date_of_birth_col: "Date of Birth"
       address_col: "Address"
+      alt_address_col: "Alternative Address"
       phone_col: "Phone"
       email_col: "Email"
       edit: "Edit"
