Add tooltip to test orders table.

--- a/config/locales/models/requested_test.en.yml
+++ b/config/locales/models/requested_test.en.yml
@@ -11,5 +11,5 @@ en:
     result:
       culture:    'Culture'
       microscopy: 'Microscopy'
-      dst:        'Dst/Lpa'
+      dst_lpa:    'Dst/Lpa'
       xpert:      'Xpert'
