--- a/config/locales/views/roles.en.yml
+++ b/config/locales/views/roles.en.yml
@@ -1,5 +1,10 @@
 en:
   roles:
+    filters:
+      roles_title: 'Roles'
+      add_roles: "Add Roles"
+      add_role_title: "Add Role"
+      name: 'Name'
     index:
       role:
         zero: 'No roles created yet'
@@ -11,3 +16,17 @@ en:
       success: 'Role was successfully updated.'
     destroy:
       success: 'Role was successfully deleted.'
+    form:
+      role_details: 'Role Details'
+      role_name: 'Role Name'
+      accessible_institution_tooltip: 'Which Institution this Role applies to.'
+      accessible_site_tooltip: 'Which Site within the Institution this Role Applies to.'
+      policies: 'Policies'
+      policies_tooltip: 'Policies grant users permisions over specific resources'
+      policies_small_muted: 'Policies grant users permisions over specific resource'
+      prohibited: 'prohibited this role from being saved:'
+      choose_one: "Choose one"
+      error: 'error'
+      name: 'Name'
+    new:
+      new_role: 'New Role'
