Ensure clinician can only delete an encounter if pending.

--- a/config/locales/views/encounters.en.yml
+++ b/config/locales/views/encounters.en.yml
@@ -9,3 +9,5 @@ en:
     perform_encounter_action:
       merge: 'Cannot add a test or sample that belongs to a different %{entity_type}'
       error: 'Error %{action_name} %{class_name}'
+    destroy:
+      success: 'Encounter was successfully deleted.'
