Add missing text to localisation.

--- a/config/locales/views/encounters.en.yml
+++ b/config/locales/views/encounters.en.yml
@@ -11,3 +11,5 @@ en:
       error: 'Error %{action_name} %{class_name}'
     destroy:
       success: 'Encounter was successfully deleted.'
+      log_action: 'Test Order %{uuid} Cancelled'
+      cancelled: 'Test Order Cancelled'
