Remove unused helper method.

--- a/cdx_core/config/locales/views/episodes.en.yml
+++ b/cdx_core/config/locales/views/episodes.en.yml
@@ -1,5 +1,9 @@
 en:
   episodes:
+    new:
+      header: 'New episode'
+    edit:
+      header: 'Edit episode'
     form:
       header: 'Episode for %{patient_name}'
       history: 'History of Previous Treatment'
